client/src/components/dedicated/TimeCounter/style.module.scss
.root {
  width: 100%;
  max-width: 34rem;
}

.counters {
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 0 0 1.6rem 0;
}

.counterSection {
  display: flex;
  flex-direction: column;
  width: 8rem
}

.value {
  font-size: $font-size-20;
  font-weight: $font-weight-semibold;
  color: $color-hexagon-dark;
}

.label {
  font-size: $font-size-10;
  color: $color-hexagon-green2;
}

.divider {
  color: $color-hexagon-grey3;
  font-size: $font-size-20;
}

